--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -49,14 +49,14 @@
             margin-bottom: 10px;
         }
 
-		#wrapper {
+		.wrapper {
             margin-right: auto;
             margin-left:  auto;
           
             max-width: 80%; 
           
-            padding-right: 10px; 
-            padding-left:  10px;
+            /*padding-right: 10px; 
+            padding-left:  10px;*/
           }
 		
 
@@ -93,8 +93,9 @@
         }*/
 
         .navbar {
-          padding-left: 70px;
-          padding-right: 70px;
+         /* padding-left: 70px;
+          padding-right: 70px;*/
+          height: 80px;
           background-color: #f3f3f3 !important;
             margin-bottom: 40px;
         }
